js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib1/l1.6.kt
open class Module2OpenClass {
    public fun testFunction2() = 20
    inline public fun testFunction22() = 220

    public konst testField222: Int
        get() = 2220
}
